create session helper and homepage

--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -14,7 +14,7 @@
 
     </div>
     <div class="col s6">
-      <form action="login/" id="login" method="POST" id="login-form" class="center-align">
+      <form action="" id="login" method="POST" id="login-form" class="center-align">
         {% csrf_token %}
         <input name="email" type="text" placeholder="email" />
         <input name="password" type="password" placeholder="password" />
