fix sessions, user can login, and add error message to login

--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -2,9 +2,6 @@
 
 {% block content %}
 
-{%if error %}
-  <h1>{{error}}</h1>
-{% endif %}
 <div class="container">
   <div class="row">
 
@@ -22,7 +19,9 @@
          <i class="material-icons right">send</i>
        </button>
       </form>
-
+      {%if error %}
+        <p class="error center-align">{{error}}</p>
+      {% endif %}
     </div>
     <div class="col s3">
     </div>
