--- a/login/templates/login/layout.html
+++ b/login/templates/login/layout.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-{% load static %}
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  {% load staticfiles %}
+  <link href="{% static 'login.css' %}" rel="stylesheet" />
   <link rel="sytlesheet" type="text/css" href="{% static 'operations/checking.css' %}" >
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
